Minimized Dmaap adapter Java 17 image
Issue-ID: NONRTRIC-845
Signed-off-by: BjornMagnussonXA <bjorn.magnusson@est.tech>
Change-Id: I8b45eb746863ae3ee4200c998fbd74c1f9b628c3